isiLanguageParser.py
# Generated from isiLanguage.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class isiLanguageParser ( Parser ):

    grammarFileName = "isiLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "'fimprog.'", "'declare'", 
                     "'numero'", "'texto'", "'leia'", "'escreva'", "'se'", 
                     "'entao'", "'senao'", "'('", "')'", "'{'", "'}'", "'.'", 
                     "<INVALID>", "':='", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PS_OP", "PS_CL", 
                      "CB_OP", "CB_CL", "DOT", "MATH", "ATTR", "COMMA", 
                      "REL", "TEXTO", "ID", "NUMBER", "WS" ]

    RULE_prog = 0
    RULE_decl = 1
    RULE_declaraID = 2
    RULE_tipo = 3
    RULE_bloco = 4
    RULE_cmd = 5
    RULE_cmdleitura = 6
    RULE_cmdescrita = 7
    RULE_cmdattrib = 8
    RULE_cmdcondicional = 9
    RULE_expr = 10
    RULE_termo = 11

    ruleNames =  [ "prog", "decl", "declaraID", "tipo", "bloco", "cmd", 
                   "cmdleitura", "cmdescrita", "cmdattrib", "cmdcondicional", 
                   "expr", "termo" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    PS_OP=11
    PS_CL=12
    CB_OP=13
    CB_CL=14
    DOT=15
    MATH=16
    ATTR=17
    COMMA=18
    REL=19
    TEXTO=20
    ID=21
    NUMBER=22
    WS=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(isiLanguageParser.DeclContext,0)


        def bloco(self):
            return self.getTypedRuleContext(isiLanguageParser.BlocoContext,0)


        def getRuleIndex(self):
            return isiLanguageParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = isiLanguageParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(isiLanguageParser.T__0)
            self.state = 25
            self.decl()
            self.state = 26
            self.bloco()
            self.state = 27
            self.match(isiLanguageParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(isiLanguageParser.TipoContext,0)


        def declaraID(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(isiLanguageParser.DeclaraIDContext)
            else:
                return self.getTypedRuleContext(isiLanguageParser.DeclaraIDContext,i)


        def getRuleIndex(self):
            return isiLanguageParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = isiLanguageParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(isiLanguageParser.T__2)
            self.state = 30
            self.tipo()
            self.state = 32 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 31
                    self.declaraID()

                else:
                    raise NoViableAltException(self)
                self.state = 34 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaraIDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(isiLanguageParser.ID)
            else:
                return self.getToken(isiLanguageParser.ID, i)

        def DOT(self):
            return self.getToken(isiLanguageParser.DOT, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(isiLanguageParser.COMMA)
            else:
                return self.getToken(isiLanguageParser.COMMA, i)

        def getRuleIndex(self):
            return isiLanguageParser.RULE_declaraID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaraID" ):
                listener.enterDeclaraID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaraID" ):
                listener.exitDeclaraID(self)




    def declaraID(self):

        localctx = isiLanguageParser.DeclaraIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaraID)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(isiLanguageParser.ID)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==isiLanguageParser.COMMA:
                self.state = 37
                self.match(isiLanguageParser.COMMA)
                self.state = 38
                self.match(isiLanguageParser.ID)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(isiLanguageParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return isiLanguageParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = isiLanguageParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            _la = self._input.LA(1)
            if not(_la==isiLanguageParser.T__3 or _la==isiLanguageParser.T__4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(isiLanguageParser.CmdContext)
            else:
                return self.getTypedRuleContext(isiLanguageParser.CmdContext,i)


        def getRuleIndex(self):
            return isiLanguageParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)




    def bloco(self):

        localctx = isiLanguageParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.cmd()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << isiLanguageParser.T__5) | (1 << isiLanguageParser.T__6) | (1 << isiLanguageParser.T__7) | (1 << isiLanguageParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmdleitura(self):
            return self.getTypedRuleContext(isiLanguageParser.CmdleituraContext,0)


        def cmdescrita(self):
            return self.getTypedRuleContext(isiLanguageParser.CmdescritaContext,0)


        def cmdattrib(self):
            return self.getTypedRuleContext(isiLanguageParser.CmdattribContext,0)


        def cmdcondicional(self):
            return self.getTypedRuleContext(isiLanguageParser.CmdcondicionalContext,0)


        def getRuleIndex(self):
            return isiLanguageParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)




    def cmd(self):

        localctx = isiLanguageParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cmd)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [isiLanguageParser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.cmdleitura()
                pass
            elif token in [isiLanguageParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.cmdescrita()
                pass
            elif token in [isiLanguageParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.cmdattrib()
                pass
            elif token in [isiLanguageParser.T__7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 56
                self.cmdcondicional()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdleituraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PS_OP(self):
            return self.getToken(isiLanguageParser.PS_OP, 0)

        def ID(self):
            return self.getToken(isiLanguageParser.ID, 0)

        def PS_CL(self):
            return self.getToken(isiLanguageParser.PS_CL, 0)

        def DOT(self):
            return self.getToken(isiLanguageParser.DOT, 0)

        def getRuleIndex(self):
            return isiLanguageParser.RULE_cmdleitura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdleitura" ):
                listener.enterCmdleitura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdleitura" ):
                listener.exitCmdleitura(self)




    def cmdleitura(self):

        localctx = isiLanguageParser.CmdleituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cmdleitura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(isiLanguageParser.T__5)
            self.state = 60
            self.match(isiLanguageParser.PS_OP)
            self.state = 61
            self.match(isiLanguageParser.ID)
            self.state = 62
            self.match(isiLanguageParser.PS_CL)
            self.state = 63
            self.match(isiLanguageParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdescritaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PS_OP(self):
            return self.getToken(isiLanguageParser.PS_OP, 0)

        def PS_CL(self):
            return self.getToken(isiLanguageParser.PS_CL, 0)

        def DOT(self):
            return self.getToken(isiLanguageParser.DOT, 0)

        def ID(self):
            return self.getToken(isiLanguageParser.ID, 0)

        def TEXTO(self):
            return self.getToken(isiLanguageParser.TEXTO, 0)

        def getRuleIndex(self):
            return isiLanguageParser.RULE_cmdescrita

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdescrita" ):
                listener.enterCmdescrita(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdescrita" ):
                listener.exitCmdescrita(self)




    def cmdescrita(self):

        localctx = isiLanguageParser.CmdescritaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cmdescrita)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(isiLanguageParser.T__6)
            self.state = 66
            self.match(isiLanguageParser.PS_OP)
            self.state = 67
            _la = self._input.LA(1)
            if not(_la==isiLanguageParser.TEXTO or _la==isiLanguageParser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 68
            self.match(isiLanguageParser.PS_CL)
            self.state = 69
            self.match(isiLanguageParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdattribContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(isiLanguageParser.ID, 0)

        def ATTR(self):
            return self.getToken(isiLanguageParser.ATTR, 0)

        def DOT(self):
            return self.getToken(isiLanguageParser.DOT, 0)

        def expr(self):
            return self.getTypedRuleContext(isiLanguageParser.ExprContext,0)


        def TEXTO(self):
            return self.getToken(isiLanguageParser.TEXTO, 0)

        def getRuleIndex(self):
            return isiLanguageParser.RULE_cmdattrib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdattrib" ):
                listener.enterCmdattrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdattrib" ):
                listener.exitCmdattrib(self)




    def cmdattrib(self):

        localctx = isiLanguageParser.CmdattribContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cmdattrib)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(isiLanguageParser.ID)
            self.state = 72
            self.match(isiLanguageParser.ATTR)
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [isiLanguageParser.ID, isiLanguageParser.NUMBER]:
                self.state = 73
                self.expr(0)
                pass
            elif token in [isiLanguageParser.TEXTO]:
                self.state = 74
                self.match(isiLanguageParser.TEXTO)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 77
            self.match(isiLanguageParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdcondicionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PS_OP(self):
            return self.getToken(isiLanguageParser.PS_OP, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(isiLanguageParser.ID)
            else:
                return self.getToken(isiLanguageParser.ID, i)

        def REL(self):
            return self.getToken(isiLanguageParser.REL, 0)

        def PS_CL(self):
            return self.getToken(isiLanguageParser.PS_CL, 0)

        def CB_OP(self, i:int=None):
            if i is None:
                return self.getTokens(isiLanguageParser.CB_OP)
            else:
                return self.getToken(isiLanguageParser.CB_OP, i)

        def CB_CL(self, i:int=None):
            if i is None:
                return self.getTokens(isiLanguageParser.CB_CL)
            else:
                return self.getToken(isiLanguageParser.CB_CL, i)

        def NUMBER(self):
            return self.getToken(isiLanguageParser.NUMBER, 0)

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(isiLanguageParser.CmdContext)
            else:
                return self.getTypedRuleContext(isiLanguageParser.CmdContext,i)


        def getRuleIndex(self):
            return isiLanguageParser.RULE_cmdcondicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdcondicional" ):
                listener.enterCmdcondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdcondicional" ):
                listener.exitCmdcondicional(self)




    def cmdcondicional(self):

        localctx = isiLanguageParser.CmdcondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cmdcondicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(isiLanguageParser.T__7)
            self.state = 80
            self.match(isiLanguageParser.PS_OP)
            self.state = 81
            self.match(isiLanguageParser.ID)
            self.state = 82
            self.match(isiLanguageParser.REL)
            self.state = 83
            _la = self._input.LA(1)
            if not(_la==isiLanguageParser.ID or _la==isiLanguageParser.NUMBER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 84
            self.match(isiLanguageParser.PS_CL)
            self.state = 85
            self.match(isiLanguageParser.T__8)
            self.state = 86
            self.match(isiLanguageParser.CB_OP)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.cmd()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << isiLanguageParser.T__5) | (1 << isiLanguageParser.T__6) | (1 << isiLanguageParser.T__7) | (1 << isiLanguageParser.ID))) != 0)):
                    break

            self.state = 92
            self.match(isiLanguageParser.CB_CL)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==isiLanguageParser.T__9:
                self.state = 93
                self.match(isiLanguageParser.T__9)
                self.state = 94
                self.match(isiLanguageParser.CB_OP)

                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 95
                    self.cmd()
                    self.state = 98 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << isiLanguageParser.T__5) | (1 << isiLanguageParser.T__6) | (1 << isiLanguageParser.T__7) | (1 << isiLanguageParser.ID))) != 0)):
                        break

                self.state = 100
                self.match(isiLanguageParser.CB_CL)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self):
            return self.getTypedRuleContext(isiLanguageParser.TermoContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(isiLanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(isiLanguageParser.ExprContext,i)


        def MATH(self):
            return self.getToken(isiLanguageParser.MATH, 0)

        def getRuleIndex(self):
            return isiLanguageParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = isiLanguageParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.termo()
            self._ctx.stop = self._input.LT(-1)
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = isiLanguageParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 107
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 108
                    self.match(isiLanguageParser.MATH)
                    self.state = 109
                    self.expr(3) 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(isiLanguageParser.ID, 0)

        def NUMBER(self):
            return self.getToken(isiLanguageParser.NUMBER, 0)

        def getRuleIndex(self):
            return isiLanguageParser.RULE_termo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo" ):
                listener.enterTermo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo" ):
                listener.exitTermo(self)




    def termo(self):

        localctx = isiLanguageParser.TermoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_termo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not(_la==isiLanguageParser.ID or _la==isiLanguageParser.NUMBER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[10] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         




